RESOLVED FIXED80059
Fix errors found when building the Mac port with ICONDATABASE disabled.
https://bugs.webkit.org/show_bug.cgi?id=80059
Summary Fix errors found when building the Mac port with ICONDATABASE disabled.
Andy Estes
Reported 2012-03-01 15:24:21 PST
Fix errors found when building with ICONDATABASE disabled.
Attachments
Patch (5.59 KB, patch)
2012-03-01 15:37 PST, Andy Estes
no flags
Andy Estes
Comment 1 2012-03-01 15:37:35 PST
WebKit Review Bot
Comment 2 2012-03-02 01:05:30 PST
Comment on attachment 129760 [details] Patch Clearing flags on attachment: 129760 Committed r109527: <http://trac.webkit.org/changeset/109527>
WebKit Review Bot
Comment 3 2012-03-02 01:05:33 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.