Fix errors found when building the Mac port with ICONDATABASE disabled. https://bugs.webkit.org/show_bug.cgi?id=80059

Reviewed by Brady Eidson.

* WebCore.exp.in: Only export IconDatabase symbols when the feature is
enabled.
* loader/icon/IconDatabase.h:
(WebCore::IconDatabase::create): WebKit calls this static method, so it
should be defined on the stub class.
(WebCore::IconDatabase::allowDatabaseCleanup): Ditto.
(WebCore::IconDatabase::checkIntegrityBeforeOpening): Ditto.


Canonical link: https://commits.webkit.org/97203@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109527 268f45cc-cd09-0410-ab3c-d52691b4dbfc